--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "fantastreamer",
   "version": "0.1.2",
   "homepage": "https://gigiul.github.io/fantastreamergg_frontend",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.2.1",
     "country-flag-icons": "^1.5.5",
     "gh-pages": "^4.0.0",
     "install": "^0.13.0",
