--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fantastreamer",
+  "name": "fantastreamergg_frontend",
   "version": "0.1.2",
   "homepage": "https://gigiul.github.io/fantastreamergg_frontend",
   "private": true,
